correction style menu gauche et bouton column visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,11 +254,26 @@ div.dataTables_filter{
     } 
 }
 
+button.dt-button, div.dt-button, a.dt-button{
+
+    position: relative;
+    display: inline-block;
+    box-sizing: border-box;
+    margin-right: 0.333em;
+    padding:0.2em 1em !important;
+    border: 1px solid #999;
+    border-radius: 2px;
+    cursor: pointer;
+    font-size: 0.88em;
+    color: black;
+    white-space: nowrap;
+    overflow: hidden;
+    background-color: #e9e9e9;
+	margin-top: 10px !important;
+    margin-left: 30px !important;
+}
+
 #menu_gauche_ul{
 -webkit-padding-start: 20px;
 -webkit-padding-end: 7px;
-}
-
-a.dt-button{
-padding:0.2em 1em;
 }
